--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -1,6 +1,6 @@
 ﻿?<!DOCTYPE HTML>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<link rel="stylesheet" href="/site_media/css/bootstrap.css">
+<link rel="stylesheet" href="/static/css/bootstrap.css">
     <script type="text/javascript">
 function review()
 {
