repair base.html

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Bootstrap dropdown with navbar example</title>
+    <title>金融管理系统</title>
     <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
 	 .title{
@@ -76,7 +76,10 @@
     </div>
     <div class="container-fluid">
      <h1>金融理财管理系统</h1>
-    </div>
+ </div>
+    {% block center %}
+    {% endblock %}
+ 
 	<script type="text/javascript" src="static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
     <script type="text/javascript">
