form ok && new contract ok

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -46,10 +46,10 @@
 					<li class="dropdown" id="accountmenu" style="padding-top: 30px;">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">参数设置<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">产品管理</a></li>
-                            <li><a href="#">经理管理</a></li>
-                            <li><a href="#">团队管理</a></li>
-							<li><a href="#">职场管理</a></li>
+                            <li><a href="/newproduct">产品管理</a></li>
+                            <li><a href="/newmanager">经理管理</a></li>
+                            <li><a href="/newparty">团队管理</a></li>
+							<li><a href="/newfield">职场管理</a></li>
                         </ul>
                     </li>
 					<li class="dropdown" id="accountmenu" style="padding-top: 30px;">
