--- a/HG/HG/template/newcontract.html
+++ b/HG/HG/template/newcontract.html
@@ -1,19 +1,43 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
-
+{% load bootstrap_toolkit %}
+<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
 <div class="right">
     <div class="new">
         <h1>欢迎使用富瑞星通业务查询系统</h1>
     </div>
     <div class="newcontract">
-        <form mothod='post' action='/newcontract'>
-            合同编号:<input type='text' name='number' />
-            客户姓名:<input type='text' name='client_name' />
-            客户身份证:<input type='text' name='client_idcard' />
-            开户行:<input type='text' name='bank' />
-            银行卡:<input type='text' name='bank_idcard' />
+        <div class="well">
+        <form class="form-horizontal" action="" method="post">
+            {% csrf_token %}
+            {{ form|as_bootstrap:"horizontal" }}
+            <label class="control-label">产品</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="product_id">
+            {%for item in products%}
+            <option value='{{item.id}}'>{{item.name}}</option>
+            {%endfor%}
+            <select>
+            <br /><br />
+            <label class="control-label">开始日期</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <input id="dateS" name="startdate" onClick="WdatePicker()">
+            <br /><br />
+            <label class="control-label">截至日期</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <input id="dateE" name="enddate" onClick="WdatePicker()">
+            <br /><br />
+            <label class="control-label">理财顾问</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="manager_id">
+            {%for item in managers%}
+            <option value='{{item.id}}'>{{item.name}}</option>
+            {%endfor%}
+            <select>
+            <p class="form-actions">
+                <input type="submit" value="提交" class="btn btn-primary">
+            </p>
         </form>
+    </div>
     </div>
 <div>
 
