--- a/HG/HG/template/newproduct.html
+++ b/HG/HG/template/newproduct.html
@@ -1,28 +1,28 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
-
+{% load bootstrap_toolkit %}
 <div class="right">
     <div class="new">
         <h1>欢迎使用富瑞星通业务查询系统</h1>
     </div>
-    <div class="newproduct">
-        <form method='post' action='/newproduct'>
-            产品名称:<input type='text' name='name' />
-            年化收益:<input type='text' name='rate' />%
-            返款类型:<select name="repaycycle_id">
-                {%for item in cycles%}
-                <option value='{{item.id}}'>{{item.name}}</option>
-                {%endfor%}
+    
+    <div class="well">
+        <form class="form-horizontal" action="" method="post">
+            {% csrf_token %}
+            {{ form|as_bootstrap:"horizontal" }}
+            <label class="control-label">返款周期</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="repaycycle_id">
+            {% for item in cycles%}
+            <option value='{{item.id}}'>{{item.name}}</option>
+            {%endfor%}
             </select>
-            封闭期:<input type='text' name='closedperiod' />
-            <select name='closedtype'>
-                <option value='m'>月</option>
-                <option value='d'>天</option>
-            </select>
-            <input type="submit" value="Submit" />
+            <p class="form-actions">
+                <input type="submit" value="提交" class="btn btn-primary">
+            </p>
         </form>
     </div>
+
 <div>
 
 
