--- a/HG/HG/template/newmanager.html
+++ b/HG/HG/template/newmanager.html
@@ -1,22 +1,24 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
-
+{% load bootstrap_toolkit %}
 <div class="right">
     <div class="new">
         <h1>欢迎使用富瑞星通业务查询系统</h1>
     </div>
-    <div class="newfield">
-        <form method='post' action='/newmanager'>
-            姓名:<input type='text' name='name' />
-            编号:<input type='text' name='number' />
-            电话:<input type='text' name='tel' />
-            所属团队:<select name='party_id'>
-                {% for item in parties%}
-                <option value='{{item.id}}'>{{item.name}}</option>
-                {%endfor%}
+    <div class="well">
+        <form class="form-horizontal" action="" method="post">
+            {% csrf_token %}
+            {{ form|as_bootstrap:"horizontal" }}
+            <label class="control-label">所属团队</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="party_id">
+            {% for item in parties%}
+            <option value='{{item.id}}'>{{item.name}}</option>
+            {%endfor%}
             </select>
-            <input type="submit" value="Submit" />
+            <p class="form-actions">
+                <input type="submit" value="提交" class="btn btn-primary">
+            </p>
         </form>
     </div>
 <div>
