--- a/HG/HG/template/newparty.html
+++ b/HG/HG/template/newparty.html
@@ -1,22 +1,28 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
-
+{% load bootstrap_toolkit %}
 <div class="right">
     <div class="new">
         <h1>欢迎使用富瑞星通业务查询系统</h1>
     </div>
-    <div class="newfield">
-        <form method='post' action='/newparty'>
-            团队名称:<input type='text' name='name' />
-            所属职场:<select name="field_id">
-                {% for item in fields%}
-                <option value='{{item.id}}'>{{item.name}}</option>
-                {%endfor%}
+    
+    <div class="well">
+        <form class="form-horizontal" action="" method="post">
+            {% csrf_token %}
+            {{ form|as_bootstrap:"horizontal" }}
+            <label class="control-label">所属职场</label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="field_id">
+            {% for item in fields%}
+            <option value='{{item.id}}'>{{item.name}}</option>
+            {%endfor%}
             </select>
-            <input type="submit" value="Submit" />
+            <p class="form-actions">
+                <input type="submit" value="提交" class="btn btn-primary">
+            </p>
         </form>
     </div>
+    
 <div>
 
 
