--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>金融管理系统</title>
     <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="container-fluid">
-     <h1>金融理财管理系统</h1>
+    
  </div>
     {% block center %}
     {% endblock %}
