user control form && every page submit return its self

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -28,10 +28,10 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">合同管理<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="/newcontract">新增合同</a></li>
-                            <li><a href="#">合同查询</a></li>
-                            <li><a href="#">合同审核</a></li>
-							<li><a href="#">审核回退</a></li>
-							<li><a href="#">全部合同查询</a></li>
+                            <li><a href="/querycontract">合同查询</a></li>
+                            <li><a href="/checkcontract">合同审核</a></li>
+							<li><a href="/rollbackcontract">审核回退</a></li>
+							<li><a href="/querycontract">全部合同查询</a></li>
                         </ul>
                     </li>
                     <li class="dropdown" id="accountmenu" style="padding-top: 30px;">
