--- a/HG/HG/template/passwd.html
+++ b/HG/HG/template/passwd.html
@@ -10,6 +10,12 @@
             <h4>错误!</h4>原密码不正确
         </div>
     {% endif %}
+    {% if changepwd_success %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h4>成功!</h4>密码修改成功
+        </div>
+    {% endif %}
     <div class="well">
         <form class="form-horizontal" action="" method="post">
             {% csrf_token %}
