--- a/HG/HG/template/querycontracts.html
+++ b/HG/HG/template/querycontracts.html
@@ -1,8 +1,21 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
+<link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<script>
+function GoTo(var1){
+ var PageNo=document.getElementById("PageNo").value;
+if (PageNo <= var1){
+ var url = "";
+ url = 'querycontracts?page='+PageNo;
+ window.open(url, '_self');
+}
+else{
+ window.alert('请输入正确页码');
+}
+}
 
-
+</script>
 <style>
 .input-append{
 text-align:center;
@@ -10,12 +23,14 @@ margin-left:auto;
 margin-right:auto;
 }
 </style>
-</head>
+
 <body>
 <h2>合同查询</h2>
 <div class="input-append" >
-    <input type="text" class="span2 search-query">
-        <button type="submit" class="btn">Search</button>
+ <form class="form-horizontal" action="/querycontracts" method="post">
+    <input type="text" class="span2 search-query" name="number" placeholder="按合同编号查询">
+        <input type="submit" class="btn" value = "Search">
+</form>
 </div>
     <div class="container">
    
@@ -51,13 +66,17 @@ margin-right:auto;
         {%endfor%}
         </tbody>
       </table>
+	  <div class='fenye' >
 	  {%ifnotequal curpage 1 %}
 		<a href="/querycontracts?page={{curpage}}&&pagetype=pageup">上一页</a>
 		{% endifnotequal %}
-		
+		第{{curpage}}/{{allpage}}
 		{% ifnotequal curpage allpage %}
 		<a href="/querycontracts?page={{curpage}}&&pagetype=pagedown">下一页</a>
 		{% endifnotequal %}
+		<p>跳转到第<input id='PageNo' style="width:30px;"> 页 <input type='button' value='GO' onclick="GoTo({{allpage}})"></p>
+		
+		</div>
     </div>
 
 </body>
