--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -29,7 +29,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="/newcontract">新增合同</a></li>
                             <li><a href="/querycontracts">合同查询</a></li>
-                            <li><a href="/checkcontract">合同审核</a></li>
+                            <li><a href="/checkcontracts">合同审核</a></li>
 							<li><a href="/rollbackcontract">审核回退</a></li>
 							<li><a href="/querycontracts">全部合同查询</a></li>
                         </ul>
