--- a/HG/HG/template/checkcontracts.html
+++ b/HG/HG/template/checkcontracts.html
@@ -14,13 +14,7 @@ else{
  window.alert('请输入正确页码');
 }
 }
-function alter(var1){
- var id = var1;
- var url = "";
- url = 'altercontract?contractid='+id;
- window.open(url,'_self');
 
-}
 function check(var1){
  var id = var1;
  var url = "";
@@ -29,13 +23,7 @@ function check(var1){
 
 }
 
-function rollback(var1){
- var id = var1;
- var url = "";
- url = 'rollbackcontract?contractid='+id;
- window.open(url,'_self');
 
-}
 </script>
 <style>
 .input-append{
@@ -49,13 +37,8 @@ text-align:center;
 </style>
 
 <body>
-<h2>合同查询</h2>
-<div class="input-append" >
- <form class="form-horizontal" action="/querycontracts" method="post">
-    <input type="text" class="span2 search-query" name="number" placeholder="按合同编号查询">
-        <input type="submit" class="btn" value = "Search">
-</form>
-</div>
+<h2>合同审核</h2>
+
     <div class="container">
    
       <table class="table">
@@ -76,6 +59,7 @@ text-align:center;
         </thead>
         <tbody>
         {%for contract in contracts%}
+         {% ifnotequal  contract.status 2 %}
         <tr>
             <td>{{contract.number}}</td>
             <td>{{contract.client_name}}</td>
@@ -88,28 +72,23 @@ text-align:center;
 			<td>{{contract.enddate}}</td>
             <td>{{contract.thismanager.name}}</td>
 			<td>
-			{% ifequal user.id contract.operator_id %}
-			<input type="button" value="修改"  style="width:40px; height:20px; margin:0px;padding:0px;" onclick="alter({{contract.id}})">
-			{% endifequal %}
-			{% ifnotequal  contract.status 2 %}
+
 			<input type="button" value="审核" style="width:40px; height:20px; margin:0px;padding:0px;" onclick="check({{contract.id}})">
-			{% endifnotequal %}
-			{% ifequal  contract.status 2 %}
-			<input type="button" value="回退" style="width:40px; height:20px; margin:0px;padding:0px;" onclick="rollback({{contract.id}})">
-			{% endifequal %}
+			
 			</td>
 			
         </tr>
+		{% endifnotequal %}
         {%endfor%}
         </tbody>
       </table>
 	  <div class='fenye' >
 	  {%ifnotequal curpage 1 %}
-		<a href="/querycontracts?page={{curpage}}&&pagetype=pageup">上一页</a>
+		<a href="/checkcontracts?page={{curpage}}&&pagetype=pageup">上一页</a>
 		{% endifnotequal %}
 		第{{curpage}}/{{allpage}}
 		{% ifnotequal curpage allpage %}
-		<a href="/querycontracts?page={{curpage}}&&pagetype=pagedown">下一页</a>
+		<a href="/checkcontracts?page={{curpage}}&&pagetype=pagedown">下一页</a>
 		{% endifnotequal %}
 		<p>跳转到第<input id='PageNo' style="width:30px;"> 页 <input type='button' value='GO' onclick="GoTo({{allpage}})"></p>
 		
