--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>金融管理系统</title>
-    <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
 	 .title{
      margin:0px;
@@ -28,7 +28,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">合同管理<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="/newcontract">新增合同</a></li>
-                            <li><a href="/querycontract">合同查询</a></li>
+                            <li><a href="/querycontracts">合同查询</a></li>
                             <li><a href="/checkcontract">合同审核</a></li>
 							<li><a href="/rollbackcontract">审核回退</a></li>
 							<li><a href="/querycontract">全部合同查询</a></li>
@@ -37,10 +37,10 @@
                     <li class="dropdown" id="accountmenu" style="padding-top: 30px;">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">还款管理<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">还款查询</a></li>
-                            <li><a href="#">到期续单</a></li>
-                            <li><a href="#">还款确认</a></li>
-							<li><a href="#">全部还款查询</a></li>
+                            <li><a href="/queryrepayitems/1">还款查询</a></li>
+                            <li><a href="/queryrepayitems/2">到期续单</a></li>
+                            <li><a href="/queryrepayitems/3">还款确认</a></li>
+							<li><a href="/queryrepayitems/4">全部还款查询</a></li>
                         </ul>
                     </li>
 					<li class="dropdown" id="accountmenu" style="padding-top: 30px;">
@@ -84,7 +84,7 @@
     {% block center %}
     {% endblock %}
  
-	<script type="text/javascript" src="static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
