--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -63,11 +63,11 @@
                     <li class="dropdown" id="accountmenu" style="padding-top: 30px;">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">统计功能<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">还款计划</a></li>
-                            <li><a href="#">进账统计</a></li>
-                            <li><a href="#">年化进账统计</a></li>
-							<li><a href="#">返款统计</a></li>
-							<li><a href="#">待收查询</a></li>
+                            <li><a href="/repayplan">还款计划</a></li>
+                            <li><a href="/intocnt">进账统计</a></li>
+                            <li><a href="/yearintocnt">年化进账统计</a></li>
+							<li><a href="/repaycnt">返款统计</a></li>
+							<li><a href="/waitrepay">待收查询</a></li>
                         </ul>
                     </li>
                     <li class="dropdown" style="padding-top: 30px;">
