--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -23,7 +23,7 @@
                         </div>
                         </li>
                     <li>&nbsp;&nbsp;</li>
-                    <li style="padding-top: 30px;"><a href="#">Home</a></li>
+                    <li style="padding-top: 30px;"><a href="/">Home</a></li>
                     <li class="dropdown" id="accountmenu" style="padding-top: 30px;">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">合同管理<b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -32,6 +32,7 @@
                             <li><a href="/checkcontracts">合同审核</a></li>
 							<li><a href="/rollbackcontracts">审核回退</a></li>
 							<li><a href="/querycontracts">全部合同查询</a></li>
+                            <li><a href="/lastcheck">合同总数审核</a></li>
                         </ul>
                     </li>
                     <li class="dropdown" id="accountmenu" style="padding-top: 30px;">
