--- a/HG/HG/template/queryrepayitems.html
+++ b/HG/HG/template/queryrepayitems.html
@@ -48,37 +48,51 @@ function repay(myid,type_id){
         }); 
     }
 }  
-function renewal(myid,type_id){
-    var r = confirm("确认续签?");
-    if(r==true){
-    $.ajax({
-        type: "POST",
-        data: "repayitem_id="+myid,
-        url: "/statusrepayitem/2/",
-        dataType: "json",
-        cache: false,
-        success: function(data){ 
-            with (data.message)
-            {
-                if(Trim()=='true'){
-                    if(type_id=="1"||type_id=="4"){
-                        var me = document.getElementById("operate_"+myid);
-                        me.innerHTML= "";
-                    }
-                    else
-                    {
-                        var me = document.getElementById("row_"+myid);
-                        me.innerHTML= "";
-                    }
-                    alert(data.info);
-                }
-                else{
-                    alert(data.info);
-                }
-            }
-         }
-        }); 
+function renewal(type_id){
+    var num = document.getElementById("renewal_num").value;
+    var myid = document.getElementById("tmpitem_id").value;
+    if(num==""){
+        alert("请输入续签合同号");
+        return false;
     }
+    else{
+        var r = confirm("确认续签?");
+        if(r==true){
+            $.ajax({
+                type: "POST",
+                data: "repayitem_id="+myid,
+                url: "/statusrepayitem/2/",
+                dataType: "json",
+                cache: false,
+                success: function(data){ 
+                    with (data.message)
+                    {
+                        if(Trim()=='true'){
+                            if(type_id=="1"||type_id=="4"){
+                                var me = document.getElementById("operate_"+myid);
+                                me.innerHTML= "";
+                            }
+                            else
+                            {
+                                var me = document.getElementById("row_"+myid);
+                                me.innerHTML= "";
+                            }
+                            alert(data.info);
+                        }
+                        else{
+                            alert(data.info);
+                        }
+                    }
+                }
+            }); 
+        }
+    }
+    document.getElementById("renewal_area").style.display="none";
+} 
+
+function clickrenewal(item_id){ 
+    document.getElementById("renewal_area").style.display="block";
+    document.getElementById("tmpitem_id").value = item_id;
 } 
 
 </script>
@@ -95,13 +109,18 @@ function renewal(myid,type_id){
     </form>
 </div>
     <div class="container">
-   
+    <div id="renewal_area" style="display:none;">
+        <input id="renewal_num" type="text" placeholder="续签合同号" />
+        <input id="tmpitem_id" style="display:none;" />
+        <button onclick="renewal({{type_id}})">提交续签</button>
+    </div>
       <table class="table">
         <thead>
           <tr>
             <th>还款日期</th>
             <th>还款金额</th>
             <th>操作</th>
+            <th>明细</th>
             <th>所属合同编号</th>
           </tr>
         </thead>
@@ -115,14 +134,15 @@ function renewal(myid,type_id){
                 {%ifequal item.status 1%}
                 <button onclick="repay({{item.id}},{{type_id}})">还款</button>
                 {%ifequal item.repaytype 2%}
-                <button onclick="renewal({{item.id}},{{type_id}})">续签</button>
+                <button onclick="clickrenewal({{item.id}})">续签</button>
                 {%endifequal%}
                 {%ifequal item.repaytype 3%}
-                <button onclick="renewal({{item.id}},{{type_id}})">续签</button>
+                <button onclick="clickrenewal({{item.id}})">续签</button>
                 {%endifequal%}
                 {%endifequal%}
                 </div>
             </td>
+            <td><a href="/repayitem/{{item.id}}">详情</a></td>
             <td><a href="/contract/{{item.thiscontract.id}}">{{item.thiscontract.number}}</a></td>            
         </tr>
         {%endfor%}
