--- a/HG/HG/template/home.html
+++ b/HG/HG/template/home.html
@@ -4,7 +4,8 @@
 
 <div class="right">
     <div class="new">
-        <h1>欢迎使用富瑞星通业务查询系统</h1>
+        <h1>欢迎使用理财管理查询系统</h1>
+        <h5>copyright@loyoen wuhan university</h5>
     </div>
 <div>
 
