showcontract and showproduct getlog's fenye

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -28,9 +28,11 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">合同管理<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="/newcontract">新增合同</a></li>
-                            <li><a href="/querycontracts">合同查询</a></li>
+                            <!--<li><a href="/querycontracts">合同查询</a></li>-->
                             <li><a href="/checkcontracts">合同审核</a></li>
+							<!--
 							<li><a href="/rollbackcontracts">审核回退</a></li>
+							-->
 							<li><a href="/querycontracts">全部合同查询</a></li>
                             <li><a href="/lastcheck">合同总数审核</a></li>
                         </ul>
