--- a/HG/HG/template/log.html
+++ b/HG/HG/template/log.html
@@ -1,7 +1,29 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
-
+<script>
+function GoTo(var1){
+ var PageNo=document.getElementById("PageNo").value;
+ if (PageNo <= var1){
+ var url = "";
+ url = 'log?page='+PageNo;
+ window.open(url, '_self');
+}
+else{
+ window.alert('请输入正确页码');
+}
+}
+</script>
+<style>
+.input-append{
+text-align:center;
+margin-left:auto; 
+margin-right:auto;
+}
+.fenye{
+text-align:center;
+}
+</style>
 <div class="right">
     <div class="container">
       <h2>日志</h2>      
@@ -24,6 +46,18 @@
         </tbody>
       </table>
     </div>
+	<div class='fenye' >
+	  {%ifnotequal curpage 1 %}
+		<a href="/log?page={{curpage}}&&pagetype=pageup">上一页</a>
+		{% endifnotequal %}
+		第{{curpage}}/{{allpage}}
+		{% ifnotequal curpage allpage %}
+		<a href="/log?page={{curpage}}&&pagetype=pagedown">下一页</a>
+		{% endifnotequal %}
+		{% ifnotequal allpage 1 %}
+		<p>跳转到第<input id='PageNo' style="width:30px;"> 页 <input type='button' value='GO' onclick="GoTo({{allpage}})"></p>
+		{% endifnotequal %}
+		</div>
 <div>
 
 
