--- a/HG/HG/template/querycontracts.html
+++ b/HG/HG/template/querycontracts.html
@@ -87,12 +87,12 @@ text-align:center;
 
         {%for contract in contracts%}
         <tr>
-            <td>{{contract.number}}</td>
+            <td><a href="/contract/{{contract.id}}">{{contract.number}}</a></td>
             <td>{{contract.client_name}}</td>
             <td>{{contract.client_idcard}}</td>
 		    <td>{{contract.bank}}</td>
 			<td>{{contract.bank_card}}</td>
-            <td>{{contract.thisproduct.name}}</td>
+            <td><a href="/product/{{contract.thisproduct.id}}">{{contract.thisproduct.name}}</a></td>
 			<td>{{contract.money}}</td>
 			<td>{{contract.startdate}}</td>
 			<td>{{contract.enddate}}</td>
@@ -101,12 +101,14 @@ text-align:center;
 			{% ifequal user.id contract.operator_id %}
 			<input type="button" value="修改"  style="width:40px; height:20px; margin:0px;padding:0px;" onclick="alter({{contract.id}})">
 			{% endifequal %}
-			{% ifnotequal  contract.status 2 %}
+			{% ifequal  contract.status 1 %}
 			<input type="button" value="审核" style="width:40px; height:20px; margin:0px;padding:0px;" onclick="check({{contract.id}})">
-			{% endifnotequal %}
+			{% endifequal %}
+			<!--
 			{% ifequal  contract.status 2 %}
 			<input type="button" value="回退" style="width:40px; height:20px; margin:0px;padding:0px;" onclick="rollback({{contract.id}})">
-			{% endifequal %}
+			{% endifequal %} 
+			-->
 			</td>
 			
         </tr>
