--- a/HG/HG/template/showcontract.html
+++ b/HG/HG/template/showcontract.html
@@ -48,7 +48,7 @@ window.open("/querycontracts",'_parent')
                 </tr>
                 <tr>
                     <th>产品</th>
-                    <td>{{contract.thisproduct.name}}</td>
+                    <td><a href="/product/{{contract.thisproduct.id}}">{{contract.thisproduct.name}}</a></td>
                 </tr>
                 <tr>
                     <th>开始日期</th>
