--- a/HG/HG/template/checkcontracts.html
+++ b/HG/HG/template/checkcontracts.html
@@ -61,12 +61,12 @@ text-align:center;
         {%for contract in contracts%}
          {% ifequal  contract.status 1 %}
         <tr>
-            <td>{{contract.number}}</td>
+            <td><a href="/contract/{{contract.id}}">{{contract.number}}</a></td>
             <td>{{contract.client_name}}</td>
             <td>{{contract.client_idcard}}</td>
 		    <td>{{contract.bank}}</td>
 			<td>{{contract.bank_card}}</td>
-            <td>{{contract.thisproduct.name}}</td>
+            <td><a href="/product/{{contract.thisproduct.id}}">{{contract.thisproduct.name}}</a></td>
 			<td>{{contract.money}}</td>
 			<td>{{contract.startdate}}</td>
 			<td>{{contract.enddate}}</td>
