--- a/HG/HG/template/checkcontract.html
+++ b/HG/HG/template/checkcontract.html
@@ -8,50 +8,86 @@ function makesure(){
     return r;
 }
 </script>
+<style>
+
+.check{
+text-align:center;
+margin-left: auto;
+margin-right: auto;
+}
+.table{
+width: 30%;
+font-size:20px;
+text-align:left; 
+border-collapse:separate;
+border-spacing:10px;
+margin-left: auto;
+margin-right: auto;
+}
+</style>
 <div class="right">
     <div class="new">
         <h1>合同审核</h1>
     </div>
-    {% if create_succ %}
-        <div class="alert alert-error">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            <h4>成功!</h4>审核成功
-        </div>
-    {% endif %}
     <div class="checkcontract">
         <div class="well">  
-            <form class="form-horizontal" action="/checkcontract" method="post" onsubmit="return makesure()">
-				<input type="hidden" id="contractid" name="contractid" placeholder="合同id" value={{contract.id}}>
-                <label class="control-label">合同编号</label><input type="text" id="number" name="number" placeholder="合同编号" value={{contract.number}} readonly="readonly">
-				<br /><br />
-                <label class="control-label">姓名</label><input type="text" id="client_name" name="client_name" placeholder="姓名" value={{contract.client_name}} readonly="readonly">
-				<br /><br />
-			   <label class="control-label">身份证号</label><input type="text" id="client_idcard" name="client_idcard" placeholder="身份证号" value={{contract.client_idcard}} readonly="readonly">
-				<br /><br />
-                <label class="control-label">开户行</label><input type="text" id="bank" name="bank" placeholder="开户行" value={{contract.bank}} readonly="readonly">
-				<br /><br />
-			   <label class="control-label">银行卡号</label><input type="text" id="bank_card" name="bank_card" placeholder="银行卡号" value={{contract.bank_card}} readonly="readonly">
-				<br /><br />
-                <label class="control-label">金额</label><input type="text" id="money" name="money" placeholder="金额" value={{contract.money}} readonly="readonly">
-				<br /><br />
-			 <label class="control-label">产品</label><input type="text" id="product_id" name="product_id" placeholder="产品" value={{contract.thisproduct.name}} readonly="readonly">
-            <br /><br />
-            <label class="control-label">开始日期</label>
-            <input id="startdate" name="startdate" placeholder="开始日期" value={{contract.startdate}} readonly="readonly" >
-			 <br /><br />
-           <label class="control-label">截至日期</label>
             
-            <input id="enddate" name="enddate" placeholder="截止日期" value={{contract.enddate}}  readonly="readonly" >
-            <br /><br />
-            <label class="control-label">理财顾问</label><input type="text" id="manager_id" name="manager_id" placeholder="理财顾问" value={{contract.thismanager.name}} readonly="readonly">
-
-            <p class="form-actions">
+				<table  class="table" style="width: 30%;margin:auto ;font-size:20px;text-align:left; border-collapse:separate;border-spacing:10px">
+            <tbody>
+                <tr>
+                    <th>合同编号</th>
+                    <td>{{contract.number}}</td>
+                </tr>
+				
+                <tr>
+                    <th>姓名</th>
+                    <td>{{contract.client_name}} </td>
+                </tr>
+                <tr>
+                    <th>身份证号</th>
+                    <td>{{contract.client_idcard}}  </td>
+                </tr>
+                <tr>
+                    <th>开户行</th>
+                    <td>{{contract.bank}}</td>
+                </tr>
+                <tr>
+                    <th>银行卡号</th>
+                    <td>{{contract.bank_card}}</td>
+                </tr>
+                <tr>
+                    <th>金额</th>
+					<td>{{contract.money}}</td>
+                </tr>
+                <tr>
+                    <th>产品</th>
+                    <td>{{contract.thisproduct.name}}</td>
+                </tr>
+                <tr>
+                    <th>开始日期</th>
+                    <td>{{contract.startdate}}</td>
+                </tr>
+                <tr>
+                    <th>结束日期</th>
+					    <td>{{contract.enddate}}</td>
+                </tr>
+                <tr>
+                    <th>理财顾问</th>
+                    <td>{{contract.thismanager.name}}</td>
+                </tr>
+            </tbody>
+        </table>
+		<div class="check" >
+        <form action="/checkcontract" method="post" onsubmit="return makesure()" 
+		<input type="hidden" id="contractid" name="contractid" placeholder="合同id" value={{contract.id}}>
+            <p class="form-actions" >
 			  <input type="radio" name="status" value="2" checked="checked"/>审核通过<br />
-				<input type="radio" name="status" value="1" />审核不通过<br />
+				&nbsp;<input type="radio" name="status" value="1" />审核不通过<br />
                 <input type="submit" value="提交" class="btn btn-primary">
             </p>
 
             </form>
+		</div>
             </div>
       
 
